<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bookmarks_no_item_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/desc_movies_bookmark"
        android:src="@drawable/ic_bookmark"
        android:tint="@color/grey_20"
        app:layout_constraintBottom_toTopOf="@+id/bookmarks_no_item_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/bookmarks_no_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_middle"
        android:text="@string/no_bookmarks"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/grey_60"
        app:layout_constraintBottom_toTopOf="@+id/bookmarks_no_item_subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookmarks_no_item_img" />

    <TextView
        android:id="@+id/bookmarks_no_item_subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_tap_to_bookmark"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/grey_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookmarks_no_item_title" />

</androidx.constraintlayout.widget.ConstraintLayout>